[package]
name = "openai-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.68"
syn = { version = "2.0.38", features = ["full"] }
quote = "1.0.33"
ai-utils = { path = "../openai-utils" }